# .dotfiles

./: .gitignore  README.md  docker-compose.yml  install.sh  setup.sh
alacritty/: alacritty.toml
claude/: CLAUDE.md
fish/: config.fish
ice/: com.dotfiles.ice.plist  com.dotfiles.ice.plist.in  pyproject.toml
ice/src/ice/: classifier.py  server.py
jack/: config.yaml  operator-init.sh
jack/agents/armitage/: CLAUDE.md
jack/agents/case/: CLAUDE.md
jack/agents/dixie/: CLAUDE.md
jack/agents/molly/: CLAUDE.md
jack/agents/riviera/: CLAUDE.md
jack/agents/wintermute/: CLAUDE.md
kuang/: .golangci.yml  Makefile  com.dotfiles.kuang.plist.in  go.mod  go.sum
kuang/_old/handlers/: ice.go  (+2 more)
kuang/certs/: com.dotfiles.kuang-renew.plist.in  root_ca.crt
kuang/cmd/: main.go
kuang/contracts/: contracts.go
kuang/handlers/: auth.go  dev.go  errors.go  filter.go  filter_test.go  gh.go  handlers.go  ice.go  ice_test.go  jira.go  pnpm.go  registry.go  registry_test.go  roles_test.go
kuang/models/: gh.go  gh_test.go  jira.go
kuang/services/: cli.go  dev.go  dev_test.go  filter.go  filter_test.go  gh.go  gh_test.go  ice.go  ice_test.go  identity.go  jira.go  jira_test.go  pnpm.go  pnpm_test.go  roles.go  roles_test.go
kuang/testing/: certs.go  integration_test.go
kuang/tools/: dev.go  gh.go  gh_test.go  jira.go  pnpm_test.go  result_test.go
kuang/wire/: dev.go  gh.go  jira.go  pnpm.go  tools.go  tools_test.go
nvim/: lazy-lock.json
step-ca/: com.dotfiles.step-ca.plist.in  issue-cert.sh  start.sh
tmux/: tmux.conf
tuwunel/: docker-compose.yml  tuwunel.toml
(+31 files in other folders)
