[project]
name = "ice"
version = "0.1.0"
description = "Prompt injection classifier daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "onnxruntime>=1.21",
    "transformers>=4.48",
    "optimum[onnxruntime]>=1.24",
    "numpy>=1.26",
]

[project.scripts]
ice = "ice.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ice"]
